update config import, and rename authRoutes to userRoutes some fixes
